Point of delivery GET bug fixes
